--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "keycode": "^2.2.0",
     "lodash": "^4.17.15",
     "postprocessing": "^6.8.8",
+    "shader-particle-engine": "^1.0.6",
     "three": "^0.110.0",
+    "three.proton.js": "^0.1.5",
     "uuid": "^3.3.3"
   }
 }
