--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
     "@types/uuid": "^3.4.6",
+    "cssnano": "^4.1.10",
     "ts-node": "^8.4.1",
     "typescript": "^3.7.2"
   },
