--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/uuid": "^3.4.6",
     "cssnano": "^4.1.10",
     "ts-node": "^8.4.1",
+    "tslint": "^5.20.1",
     "typescript": "^3.7.2"
   },
   "dependencies": {
