--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/dat.gui": "^0.7.5",
     "@types/express": "^4.17.2",
     "@types/lodash": "^4.14.144",
+    "@types/seedrandom": "^2.4.28",
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
     "@types/uuid": "^3.4.6",
@@ -22,6 +23,7 @@
     "keycode": "^2.2.0",
     "lodash": "^4.17.15",
     "postprocessing": "^6.8.8",
+    "seedrandom": "^3.0.5",
     "shader-particle-engine": "^1.0.6",
     "simplex-noise": "^2.4.0",
     "socket.io": "^2.3.0",
