--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "v8": "^0.1.0"
   },
   "scripts": {
-    "start": "nodemon",
+    "start": "npx ts-node ./src/startServer.ts",
     "parcel": "parcel index.html",
     "lint": "tslint -c tslint.json 'src/**/*.ts'"
   }
