--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "scripts": {
     "start": "npx ts-node ./src/startServer.ts",
+    "build": "parcel build index.html",
     "parcel": "parcel index.html",
     "lint": "tslint -c tslint.json 'src/**/*.ts'"
   }
